# wayfire-rs

./: Cargo.toml  LICENSE  README.md
examples/fullscreen/: Cargo.toml
examples/fullscreen/src/: main.rs
examples/minimize/: Cargo.toml
examples/minimize/src/: main.rs
examples/move_view_to_workspace/: Cargo.toml
examples/move_view_to_workspace/src/: main.rs
examples/toggle_plugins/: Cargo.toml
examples/toggle_plugins/src/: main.rs
examples/wayfire-ipc/: Cargo.toml
examples/wayfire-ipc/src/: main.rs
src/: ipc.rs  lib.rs  main.rs  models.rs
