[package]
name = "wayfire-rs"
version = "0.1.2"
authors = ["Thiago <systemofdown@gmail.com>"]
edition = "2021"

# Metadata
description = "A Rust library for interacting with Wayfire."
documentation = "https://docs.rs/rustfire"
homepage = "https://github.com/yourusername/rustfire"
repository = "https://github.com/yourusername/rustfire"
license-file = "LICENSE"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
