[package]
name = "wayfire-rs"
version = "0.1.8"
authors = ["Thiago <systemofdown@gmail.com>"]
edition = "2021"

# Metadata
description = "A Rust library for interacting with Wayfire."
documentation = "https://docs.rs/wayfire-rs"
homepage = "https://github.com/killown/wayfire-rs"
repository = "https://github.com/killown/wayfire-rs"
license-file = "LICENSE"

[lib]
name = "wayfire_rs"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
